<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

<TextView
    android:id="@+id/info"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/modifymessage"
    android:textSize="20sp" />

    <RelativeLayout
    	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" >
		<TextView
		    android:id="@+id/tv_name"
		    android:layout_width="60dip"
		    android:layout_height="50dip"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="8dip"
		    android:gravity="center_vertical|right"
		    android:text="@string/name"
		    android:textSize="18sp" />

		<EditText
		    android:id="@+id/et_name"
		    android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="5dip"
		    android:layout_marginTop="5dip"
		    android:layout_toRightOf="@+id/tv_name"
		    android:hint="@string/in_name"
		    android:textColor="#606060"
		    android:textSize="16sp" />

</RelativeLayout>

<RelativeLayout
    	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" >	

		<TextView
		    android:id="@+id/tv_group"
		    android:layout_width="60dip"
		    android:layout_height="50dip"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="8dip"
		    android:gravity="center_vertical|right"
		    android:text="@string/password"
		    android:textSize="18sp" />		

		<EditText
		    android:id="@+id/et_mps"
		    android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="5dip"
		    android:layout_marginTop="5dip"
		    android:layout_toRightOf="@+id/tv_group"
		    android:hint="@string/login_password"
		    android:textColor="#606060"
		    android:textSize="16sp" />

</RelativeLayout>
 <RelativeLayout
    	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/tv_mlevel"
		    android:layout_width="60dip"
		    android:layout_height="50dip"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="8dip"
		    android:gravity="center_vertical|right"
		    android:text="@string/level"
		    android:textSize="18sp" />

		<EditText
		    android:id="@+id/et_mlevel"
		    android:layout_width="fill_parent"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="5dip"
		    android:layout_marginTop="5dip"
		    android:layout_toRightOf="@id/tv_mlevel"
		    android:hint="@string/in_level"
		    android:textColor="#606060"
		    android:textSize="16sp" />

	</RelativeLayout>
</LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="240dip"
      android:orientation="horizontal" >

      <Button
          android:id="@+id/but_save"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/save" />

      <Button
          android:id="@+id/but_list"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/back" />
  </LinearLayout>
  
</LinearLayout>
