<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:fillViewport="true"
    android:scrollbarStyle="outsideInset" >
    -->

    <!-- <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" > -->

        <CheckBox
            android:id="@+id/CheckBox01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_check_prob1" >
        </CheckBox>

        <CheckBox
            android:id="@+id/CheckBox02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_check_prob2" >
        </CheckBox>

        <CheckBox
            android:id="@+id/CheckBox03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_check_prob3" >
        </CheckBox>

        <CheckBox
            android:id="@+id/CheckBox04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_check_prob4" >
        </CheckBox>

        <CheckBox
            android:id="@+id/CheckBox05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_check_prob5" >
        </CheckBox>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/eme_other" >
            </TextView>

            <EditText
                android:id="@+id/edit_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/TextView"
                android:inputType="none"
                android:textStyle="normal" >
            </EditText>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>

    <!-- </ScrollView> -->
    <!-- </LinearLayout> -->
