<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dminfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modifymessage"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_devnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/devnum"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tv_devnum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/tv_devnum"
                android:hint="@string/in_devnum"
                android:textColor="#606060"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_sperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/sendperson"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tv_sperson"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/tv_sperson"
                android:hint="@string/in_sperson"
                android:textColor="#606060"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_rperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/recperson"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tv_rperson"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@id/tv_rperson"
                android:hint="@string/in_rperson"
                android:textColor="#606060"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_mtimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/mtimes"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tv_mtimes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/tv_mtimes"
                android:hint="@string/in_mtimes"
                android:textColor="#606060"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_mlevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/prelever"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tv_mlevel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/tv_mlevel"
                android:hint="@string/in_mlevel"
                android:textColor="#606060"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_consume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/consume"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tv_consume"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/tv_consume"
                android:hint="@string/in_confume"
                android:textColor="#606060"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_finishdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/finishdate"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tv_finishdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/tv_finishdate"
                android:hint="@string/in_finishdate"
                android:textColor="#606060"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_faultcause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dip"
                android:gravity="center_vertical|right"
                android:text="@string/faultcause"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_tv_faultcause"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/in_faultcause"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dmbut_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/dmbut_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>