<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_blue_light"
        android:text="@string/antennaA"
        android:textSize="18sp" >
    </TextView>
    <Spinner
        android:id="@+id/antennaA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_blue_light"
        android:text="@string/antennaB"
        android:textSize="18sp" >
    </TextView>
    <Spinner
        android:id="@+id/antennaB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_blue_light"
        android:text="@string/antennaC"
        android:textSize="18sp" >
    </TextView>
    <Spinner
        android:id="@+id/antennaC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_blue_light"
        android:text="@string/antennaD"
        android:textSize="18sp" >
    </TextView>
    <Spinner
        android:id="@+id/antennaD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </Spinner>

</LinearLayout>