<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:weightSum="3.0"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/btn1"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:text="@string/face"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0" />
    <Button
        android:id="@+id/btn2"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_width="0dip"
        android:text="@string/function"
        android:layout_height="fill_parent"
        android:layout_weight="1.0" />
    <Button
        android:id="@+id/btn3"
        android:layout_gravity="bottom"
        android:text="@string/system_check"
        android:gravity="bottom"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0" />

</LinearLayout>
